@@ -1,3 +1,8 @@
+News in 40.1, 2021-08-26
+------------------------
+* Appdata updates.
+* Translation updates.
+
 News in 40.0, 2021-04-12
 ------------------------
 * Translation updates.
